--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -1308,6 +1308,9 @@
 .skuSelectorItem--colors-selector--selected {
   border: solid 1px black;
 }
+.skuSelectorItem--selector-mobile--selected {
+  border: solid 1px black;
+}
 
 .searchBarContainer {
   height: 50px;
